prodMetadata/src/objects/Notification_Message__c.object
<CustomObject>
    <description>This custom Salesforce object will be used to store notification messages that need to be sent to a device.</description>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will become checked once the message has been delivered to the Notification Service.</description>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Text__c</fullName>
        <description>This field will be used to store the message text.</description>
        <label>Message Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Device__c</fullName>
        <description>This field will be used to store the ID of the Registered Device to which this Notification Message belongs.</description>
        <label>Registered Device</label>
        <referenceTo>Registered_Device__c</referenceTo>
        <relationshipLabel>Notification Messages</relationshipLabel>
        <relationshipName>Notification_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Notification Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delivered__c</columns>
        <columns>Message_Text__c</columns>
        <columns>Registered_Device__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Delivered</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Delivered__c</columns>
        <columns>Message_Text__c</columns>
        <columns>Registered_Device__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delivered__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Non Delivered</label>
    </listViews>
    <listViews>
        <fullName>Notification_Messages</fullName>
        <columns>NAME</columns>
        <columns>Registered_Device__c</columns>
        <columns>Message_Text__c</columns>
        <columns>Delivered__c</columns>
        <filterScope>Everything</filterScope>
        <label>Notification Messages</label>
    </listViews>
    <nameField>
        <label>Notification Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>